Tweak formating for bullets

--- a/README.Rmd
+++ b/README.Rmd
@@ -100,14 +100,12 @@ data$time <- with_tz(data$time, "Etc/GMT+8")
 
 You can supply coordinates in one of two ways.
 
-(1) You can have `lon` and `lat` columns, indicating the decimal coordinates for your location either in your data
-
+- You can have `lon` and `lat` columns, indicating the decimal coordinates for your location either in your data
 ```{r, echo = FALSE}
 dplyr::select(flicker, time, light, lon, lat)
 ```
 
-(2) You can have a separte variable that you supply to each function (order matters, and must be `lon`, `lat`):
-
+- You can have a separte variable that you supply to each function (order matters, and must be `lon`, `lat`):
 ```{r, eval = FALSE}
 sun_times(data, loc = c(-120.3408, 50.67611))
 ```
